--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="block block_red"></div>
-    <div class="block block_green"></div>
-    <div class="block block_blue"></div>
+    <div class="block block_1"></div>
+    <div class="block block_2"></div>
+    <div class="block block_3"></div>
   </body>
 </html>
